# wembed

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  demo.cpp  readme.md
cli/: driver.cpp
dep/: testsuite.patch  try_signal.patch
inc/: wembed.hpp
inc/wembed/: context.hpp  intrinsics.hpp  lang.hpp  module.hpp  utils.hpp  wasi.hpp  wasi_decls.hpp
src/: context.cpp  intrinsics.cpp  module.cpp  posix.cpp  utils.cpp  wasi.cpp  wasi_common.cpp
src/sys/: posix.cpp  wasi_posix.cpp
tst/: debug_case.cpp  test.cpp  test.hpp  test_gen.cpp  test_utils.hpp
tst/gtests/: hashtype.cpp  llvm.cpp  try_signal.cpp
tst/testsuite/: test.cpp  test.hpp
tst/wasi/: binarytrees.c  debug_test.c  io.c  load_store.c  ls.c  print_args.c  printf.c  unittests.c
tst/wasi/dep/: minunit.h
tst/wasmception/: bench.sh  debug_test.c  fasta.c  load_store.c  mandelbrot.gcc-2.c  nbody.c  print_args.c  printf.c  rand.c  spectralnorm.c
